# studio-folder-builder

./: .gitignore  CHANGLOG.md  README.md  flow_config.example.json  flow_config.json  job_config.json  job_config1.json  main.py  pyproject.toml  requirements-flow.txt  requirements.txt  run_tests.bat  setup.bat  setup.ps1
builder/: app.py  models.py
builder/core/: builder.py  job_config.py  manifest.py  planner.py  reporting.py  template_loader.py  template_preview.py  template_schema.py
builder/integrations/: flow_client.py  flow_config.py
builder/ui/: main_window.py
builder/util/: fs.py  parse_assets.py  parse_input.py
temp_folder_builder_test/MyShow/production/: manifest.json
temp_folder_builder_test/MyShow/sequences/SQ010/SH010/docs/: notes.md
templates/: animation_default.json  game_default.json  vfx_default.json
tests/: test_builder.py  test_flow_format.py  test_job_config.py  test_manifest.py  test_planner.py  test_planner_assets.py  test_template_loader.py
