[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "studio-folder-builder"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = ["PySide6>=6.6"]

[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages.find]
where = ["."]
include = ["builder*"]
